[package]
name = "benchmarks"
version = "0.1.0"
authors = ["Jonathan Stites <mail@jonstites.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ips4o = { path = "../ips4o" }
partial_function = "0.5"
rand = "0.7"
rand_xorshift = "0.2"
rayon = "1.3"